image added beginning to style text

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 body {
     background: grey;
 }
+
+h1 {
+    font-family: 'Carter One';font-size: 36px;
+    color: white;
+    text-shadow: 20pt;
+    text-align: center;
+}
+
+img {
+    border-radius: 40pt;
+    padding-right: 15pt;
+    float: left;
+}
