--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
 body {
     background: grey;
+    background-attachment: fixed;
 }
 
 h1 {
     font-family: 'Carter One';font-size: 36px;
     color: white;
-    text-shadow: 20pt;
+    text-shadow: 2px 2px 4px #000000;
     text-align: center;
 }
 
 img {
     border-radius: 40pt;
-    padding-right: 15pt;
     float: left;
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
+}
+
+.wrapper {
+    background-image: linear-gradient(transparent 10%, #fff 30%, #fff 70%, transparent 90%);
+    -webkit-background-clip: text;
+    background-attachment: fixed;
+}
+
+.wrapper > *{
+    color: transparent;
 }
