--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 body {
+    background-image: image('images\drflyingcloud.png');
     background: grey;
     background-attachment: fixed;
 }
 
 h1 {
-    font-family: 'Carter One';font-size: 36px;
+    font-family: 'Carter One';
+    font-size: 36px;
     color: white;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: 2px 2px 4px black;
     text-align: center;
+}
+
+p { 
+    font-family: 'Walter Turncoat';
+    font-size: 18px;
+    color: white;
 }
 
 img {
@@ -16,12 +24,6 @@ img {
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
 }
 
-.wrapper {
-    background-image: linear-gradient(transparent 10%, #fff 30%, #fff 70%, transparent 90%);
-    -webkit-background-clip: text;
-    background-attachment: fixed;
-}
-
-.wrapper > *{
-    color: transparent;
+.txtColumn {
+    padding: 20pt;
 }
