--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ p {
     position: absolute;
     margin-left: 550px;
     margin-right: 30px;
-    font-family: 'Walter Turncoat';
+    font-family: 'Vollkorn';
     font-size: 36px;
     color: white;
-    text-shadow: 4px 4px 4px black;
+    text-shadow: 2px 2px 4px black;
     visibility: hidden;
 }
 
