--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 h1 { 
     font-family: 'Carter One';
-    font-size: 36px;
+    font-size: 2vw;
     color: white;
     text-shadow: 4px 4px 4px black;
     text-align: center;
@@ -17,7 +17,7 @@ p {
     top: 0;
     left: 0;
     font-family: 'Vollkorn';
-    font-size: 36px;
+    font-size: 2vw;
     color: white;
     text-shadow: 2px 2px 4px black;
     visibility: hidden;
@@ -28,10 +28,15 @@ a {
     padding-right: 25pt;
 }
 
+.img {
+    width: 25%;
+}
+
 #portrait {
-    position: fixed;
-    border-radius: 40pt;
-    margin-left: 20pt;
+    width: 100%;
+    height: auto;
+    border-radius: 4vw;
+    margin-left: 2vw;
     float: left;
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
 }
@@ -72,6 +77,6 @@ a {
 
 .text {
     position: relative;
-    margin-left: 550px;
+    margin-left: 30vw;
     margin-right: 30px;
 }
