--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,9 @@ a {
 #copyright {
     position: fixed;
     bottom: 0;
-    margin-left: 30pt;
-    margin-bottom: 5pt;
+    margin-left: 3vw;
+    margin-bottom: 1vh;
+    font-size: 1vw;
 }
 
 .text {
