--- a/styles.css
+++ b/styles.css
@@ -72,10 +72,37 @@ button {
 .navigation {
     position: fixed;
     bottom: 0;
-    padding: 1vw;
     left: 50%;
     transform: translateX(-50%);
 }
+
+#navRange {
+    width: 17vw;
+    height: auto;
+    opacity: 0.5;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.slider {
+    -webkit-appearance: none;
+    background: black;
+    opacity: 0.2;
+    border-radius: 24px;
+ }
+ .slider:hover {
+    opacity: 1;
+ }
+ .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border-radius: 50%;
+    appearance: none;
+    width: 45px;
+    height: 45px;
+    background: rgb(200, 255, 0);
+    border: 6px solid rgb(0, 105, 44);
+    cursor: pointer;
+ }
 
 #copyright {
     position: fixed;
