--- a/styles.css
+++ b/styles.css
@@ -89,19 +89,7 @@ button {
     background: black;
     opacity: 0.2;
     border-radius: 24px;
- }
- .slider:hover {
-    opacity: 1;
- }
- .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    border-radius: 50%;
-    appearance: none;
-    width: 45px;
-    height: 45px;
-    background: rgb(200, 255, 0);
-    border: 6px solid rgb(0, 105, 44);
-    cursor: pointer;
+    outline: none;
  }
 
 #copyright {
