--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,7 @@ button {
     margin-left: 30vw;
     margin-right: 2vw;
 }
+
+@media screen and (min-width:0\0) {
+    #navRange { background: transparent;}
+}
