--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ p {
     top: 0;
     left: 0;
     font-family: 'Vollkorn';
-    font-size: 2vw;
+    font-size: 4vh;
     color: white;
     text-shadow: 2px 2px 4px black;
     visibility: hidden;
